--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hiii</h1>
+    <h1>Hello</h1>
     <h2>Just to check something</h2>
 </body>
 </html>
